static/css/base.css
/* GOOGLE FONTS */

@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400;900&family=Monsieur+La+Doulaise&family=Roboto:wght@300;400&display=swap');
/* Monsieur La Doulaise */
@import url('https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap');
/* Lato */
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400;900&display=swap');
/* Roboto */
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
/* Homemade Apple */
@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');

/***********/
/* GENERAL STYLES */

html {
    height: 100%;
}

:root {
    --prussian-blue: rgb(0, 49, 83);
    --pacific-blue: rgb(28, 169, 201);
    --overlay-black: rgba(0, 0, 0, 0.7);
    --fully-black: rgb(34, 34, 34);
    --silver-grey: rgb(194, 195, 198);
    --cafe-noir: rgb(75, 54, 33);
    --white: rgb(255, 255, 255);
    --yellow: rgb(255, 193, 7);
    --red: rgb(220, 53, 69);

    /* font Color */
    --text-white: rgb(249, 249, 249);
    --text-grey: rgb(153, 150, 145);
    --text-light-grey: rgb(194, 195, 198);
    --text-black: rgba(17, 17, 17);
}

a:hover {
    opacity: 0.7;
}

ul {
    list-style: none;
}

i {
    font-size: 18px !important;
}

body {
    font-family: 'Roboto', sans-serif;
    font-size: 1.2rem;
    background-color: whitesmoke;
}

header {
    background-color: whitesmoke;
}

hr {
    color: var(--prussian-blue);
}

/***********/
/* BASE.HTML */

.main-logo-link {
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
}

.logo {
    font-size: 3em;
    letter-spacing: 2px;
    z-index: 100;
    font-weight: 500;
    font-family: 'Monsieur La Doulaise', cursive;
}

.prussian-blue {
    color: var(--prussian-blue);
}

.pacific-blue {
    color: var(--pacific-blue);
}

.cafe-brown {
    color: var(--cafe-noir);
}

.btn {
    --bs-btn-border-radius: 0 !important;
}

/***********/
/* NAVBAR */

.navbar-expand-lg {
    background-color: whitesmoke;
    margin-top: 1.2em;
    padding: 0;
}

.topnav {
    margin-top: 1px;
}

.topnav.topnav-active {
    margin-top: -8px;
}

.navbar-light .navbar-nav .nav-link {
    padding: 1.8em 1.25em;
}

.navbar-nav .nav-link:hover {
    background-color: whitesmoke;
    color: var(--silver-grey) !important;
}

/***********/
/* TOAST MESSAGES */

.message-container {
    position: fixed;
    top: 85px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

.float-right {
    float: right !important;
}

.nav-link,
.nav-link>a,
footer h6,
.welcome-msg-wrapper h2,
.logo-font {
    font-family: 'Roboto', sans-serif;
}

.update-link,
.delete-item {
    cursor: pointer;
}

/* Modal */
.modal-title {
    color: var(--prussian-blue);
    text-decoration: overline;
}

.modal-header {
    background-color: whitesmoke;
    border: none;
}

.modal-header .close {
    margin: -2rem -1.5rem -1.5rem auto;
    background-color: black;
    padding: 2px;
    color: whitesmoke;
    width: 30px;
    height: 30px;
    border-radius: 50%
}

.modal-header .close:hover {
    background-color: whitesmoke;
    color: black;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0;
    height: 0;
    border-left: 4px solid transparent;
    border-right: 4px solid transparent;
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

/***********/
/* HOME PAGE */
.icon {
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.marquee {
    height: 40px;
    overflow: hidden;
    position: relative;
    background-color: var(--prussian-blue);
    color: white;
}

.marquee h5 {
    position: absolute;
    width: 100%;
    height: 100%;
    margin: 0;
    line-height: 30px;
    text-align: center;
}

.btn-style {
    color: whitesmoke;
    background-color: var(--prussian-blue);
}

.btn-style:hover {
    color: var(--prussian-blue);
    background-color: whitesmoke;
    border: 1px solid var(--prussian-blue);
}

.btn-secundary {
    border: 1px solid black;
    color: black;
    font-size: 16px;
    background-color: whitesmoke;
}

.btn-secundary:hover {
    background-color: var(--prussian-blue);
    color: whitesmoke;
    opacity: 0.9 !important;
}


/***********/
/* FOOTER */
footer {
    background-color: var(--prussian-blue);
    border-top: 2px solid var(--silver-grey);
    color: whitesmoke;
}

footer h6,
footer h3 {
    font-family: 'Homemade Apple', cursive;
    color: whitesmoke;
    font-size: 1rem;
    font-weight: 600;
    letter-spacing: 1.5px;
}

.footer-link {
    color: var(--main-nav-color);
}

.footer-link:hover {
    color: var(--pacific-blue);
}

.btn-info:hover {
    color: var(--pacific-blue);
    background-color: whitesmoke;
    border-color: var(--pacific-blue);
}

/***********/
/* PRODUCTS PAGE */
.product-img {
    height: 270px;
    width: auto;
}

.category-table {
    max-height: 450px;
    overflow: auto;
}


/***********/
/* PRODUCT FORM */
.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.customer-control-label::before {
    background-color: #dc3545;
    border-radius: 0;
    border-color: #dc3545;
}

/***********/
/* PRODUCTS DETAILS PAGE */
.product-details-img {
    max-height: 31.25rem;
    width: auto;
}

.product-name {
    text-transform: uppercase;
    font-family: 'Lato', sans-serif;
}

.sub-title {
    font-size: 2rem;
    font-weight: 500;
    padding: 15px 0;
}

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: white;
    z-index: -1;
}

a.category-badge>span.badge:hover {
    background: var(--prussian-blue) !important;
    color: whitesmoke !important;
}

/***********/
/* BAG PAGE */
.bag-item-img {
    max-height: 10.625rem;
    width: auto;
}

/***********/
/* WISHLIST PAGE */
.wishlist-img>a>img {
    max-height: 80px;
    width: auto;
}

/***********/
/* ALLAUTH FORMS */
.form-group {
    margin-bottom: 1rem;
}

.allauth-form-inner-content p {
    margin-top: 1.5rem;
    color: rgb(56, 56, 56);
}

.allauth-form-inner-content input {
    border-color: black;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: var(--silver-grey);
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
    display: inline-block;
    font-weight: 400;
    color: white;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: var(--prussian-blue);
    border: 1px solid var(--silver-grey);
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out,
        box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {
    color: var(--prussian-blue);
    background-color: var(--silver-grey);
}

input[name='q']::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {
    color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
    color: #17a2b8;
    /* text-info */
}

/***********/
/* MEDIA QUERIES */

@media only screen and (min-width: 1200px) {
    .container {
        max-width: 80%;
    }
}

@media only screen and (max-width: 1030px) {

    .navbar-nav .nav-link,
    .footer-link {
        width: 25%;
    }
}

@media (min-width: 992px) {
    .header-container {
        padding-top: 164px;
    }

    .topnav {
        padding-right: 0 !important;
    }
}

@media only screen and (max-width: 991px) {
    body {
        height: calc(100vh - 116px);
    }

    .header-container {
        padding-top: 82px;
    }

    .logo-mobile {
        display: block !important;
        font-size: 1rem;
    }

    .nav-link {
        padding: 0.15rem;
    }

    .navbar-expand-lg {
        margin-top: -1px !important;
    }

    .topnav.topnav-active {
        margin-top: 1px;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
    }

    #delivery-banner h4 {
        font-size: .9rem;
    }

    .navbar-expand-lg {
        margin-top: 0px;
        padding: 10px 15px;
    }

    .img-magnifier-container {
        text-align: center;
    }

    .btn.btn-outline-secondary.rounded-1,
    .btn.btn-style.rounded-0,
    .btn.btn-outline-secondary.rounded-1.btn-lg,
    .btn.btn-style.rounded-1.btn-lg {
        padding: .6rem 1rem;
    }

    .btn.btn-outline-secondary.rounded-1.btn-lg,
    .btn.btn-style.rounded-1.btn-lg {
        font-size: .75rem;
        margin-bottom: 20px;
        width: 190px;
    }
}

@media only screen and (max-width: 900px) {
    .row-reverse {
        -webkit-box-orient: vertical !important;
        -webkit-box-direction: normal !important;
        -ms-flex-direction: column !important;
        flex-direction: column !important;
        justify-content: center;
    }

    .header-container {
        padding-top: 64px;
    }

    #footer .trust-company {
        width: 180px;
        position: relative;
        margin-top: -130px;
        margin-left: 380px;
    }

    #footer .copyright p {
        width: initial;
    }
}

@media only screen and (max-width: 600px) {
    .display-desktop {
        display: none !important;
    }

    .display-mobile {
        display: block !important;
    }

    .modal-title {
        font-size: 1.7rem;
    }
}

@media only screen and (max-width: 481px) {
    .dropdown-account.show {
        margin-left: -90px;
    }
}

@media only screen and (max-width: 433px) {
    .sub-title {
        font-size: 1.5rem;
    }
}

@media only screen and (max-width: 333px) {
    .list-inline-item p {
        font-size: 1rem;
    }

    .navbar-expand-lg {
        padding: 10px 6px;
    }
}

